tweaks for TooltipRegionOwner.

--- a/src/scss/climate-icons.scss
+++ b/src/scss/climate-icons.scss
@@ -4,6 +4,7 @@
   .wh-icon.climate.#{$climate} {
     width: 26px;
     height: 26px;
+    background-size: contain;
     background-image: url("~@/assets/icons/climates/#{$climate}.png");
   }
 }
