--- a/src/scss/skins.scss
+++ b/src/scss/skins.scss
@@ -1,10 +1,11 @@
-/* generated on 2019-03-31T08:31:40.974Z - do not modify! */
+/* generated on 2019-04-03T19:40:56.673Z - do not modify! */
 
 $default:
   "icon_cross_small"
   "icon_filter_climate"
   "icon_filter_faction"
   "icon_marker_settlement"
+  "icon_marker_trade"
   "icon_options"
   "icon_port"
   "icon_provinces"
