Quick update assets prophet and warlock patch.

--- a/src/scss/flags.scss
+++ b/src/scss/flags.scss
@@ -1,4 +1,4 @@
-/* generated on 2019-03-31T08:31:40.972Z - do not modify! */
+/* generated on 2019-04-20T17:21:24.236Z - do not modify! */
 
 $flags:
   "abandoned"
@@ -42,6 +42,9 @@ $flags:
   "wh2_dlc11_def_the_blessed_dread"
   "wh2_dlc11_def_the_blessed_dread_separatists"
   "wh2_dlc11_vmp_the_barrow_legion"
+  "wh2_dlc12_lzd_cult_of_sotek"
+  "wh2_dlc12_skv_clan_fester"
+  "wh2_dlc12_skv_clan_mange"
   "wh2_main_brt_knights_of_origo"
   "wh2_main_brt_knights_of_the_flame"
   "wh2_main_brt_thegans_crusaders"
@@ -147,6 +150,7 @@ $flags:
   "wh2_main_skv_clan_pestilens"
   "wh2_main_skv_clan_pestilens_separatists"
   "wh2_main_skv_clan_septik"
+  "wh2_main_skv_clan_skryre_separatists"
   "wh2_main_skv_clan_skyre"
   "wh2_main_skv_clan_spittel"
   "wh2_main_skv_grey_seer_clan"
@@ -187,6 +191,7 @@ $flags:
   "wh_dlc08_nor_norsca"
   "wh_dlc08_nor_vanaheimlings"
   "wh_dlc08_nor_wintertooth"
+  "wh_dlc12_grn_leaf_cutterz"
   "wh_main_brt_artois"
   "wh_main_brt_bastonne"
   "wh_main_brt_bordeleaux"
