--- a/src/scss/flags.scss
+++ b/src/scss/flags.scss
@@ -1,4 +1,4 @@
-/* generated on 2019-04-20T17:21:24.236Z - do not modify! */
+/* generated on 2019-11-25T13:04:07.241Z - do not modify! */
 
 $flags:
   "abandoned"
@@ -45,6 +45,12 @@ $flags:
   "wh2_dlc12_lzd_cult_of_sotek"
   "wh2_dlc12_skv_clan_fester"
   "wh2_dlc12_skv_clan_mange"
+  "wh2_dlc13_emp_golden_order"
+  "wh2_dlc13_emp_the_huntmarshals_expedition"
+  "wh2_dlc13_lzd_avengers"
+  "wh2_dlc13_lzd_defenders_of_the_great_plan"
+  "wh2_dlc13_lzd_spirits_of_the_jungle"
+  "wh2_dlc13_wef_laurelorn_forest"
   "wh2_main_brt_knights_of_origo"
   "wh2_main_brt_knights_of_the_flame"
   "wh2_main_brt_thegans_crusaders"
