Added new flags.

--- a/src/scss/flags.scss
+++ b/src/scss/flags.scss
@@ -1,4 +1,4 @@
-/* generated on 2019-11-25T13:04:07.241Z - do not modify! */
+/* generated on 2019-12-18T19:07:18.303Z - do not modify! */
 
 $flags:
   "abandoned"
@@ -51,6 +51,9 @@ $flags:
   "wh2_dlc13_lzd_defenders_of_the_great_plan"
   "wh2_dlc13_lzd_spirits_of_the_jungle"
   "wh2_dlc13_wef_laurelorn_forest"
+  "wh2_dlc14_grn_red_cloud"
+  "wh2_dlc14_lzd_itz_itza_tribe"
+  "wh2_dlc14_skv_rictus_clan_nest"
   "wh2_main_brt_knights_of_origo"
   "wh2_main_brt_knights_of_the_flame"
   "wh2_main_brt_thegans_crusaders"
@@ -72,6 +75,7 @@ $flags:
   "wh2_main_def_drackla_coven"
   "wh2_main_def_ghrond"
   "wh2_main_def_hag_graef"
+  "wh2_main_def_hag_graef_separatists"
   "wh2_main_def_har_ganeth"
   "wh2_main_def_har_ganeth_separatists"
   "wh2_main_def_karond_kar"
@@ -147,6 +151,7 @@ $flags:
   "wh2_main_rogue_vashnaar"
   "wh2_main_rogue_wrath_of_nature"
   "wh2_main_skv_clan_eshin"
+  "wh2_main_skv_clan_eshin_separatists"
   "wh2_main_skv_clan_gnaw"
   "wh2_main_skv_clan_mordkin"
   "wh2_main_skv_clan_mors"
@@ -198,6 +203,7 @@ $flags:
   "wh_dlc08_nor_vanaheimlings"
   "wh_dlc08_nor_wintertooth"
   "wh_dlc12_grn_leaf_cutterz"
+  "wh_dlc14_brt_chevaliers_de_lyonesse"
   "wh_main_brt_artois"
   "wh_main_brt_bastonne"
   "wh_main_brt_bordeleaux"
